--- a/demos/webpack/styles/app.less
+++ b/demos/webpack/styles/app.less
@@ -1,9 +1,6 @@
-html,
-body {
-  background: purple;
-}
-html,
-body {
+@import 'module.less';
+
+html, body {
   background: cornflowerblue;
   color: #222;
   font-family: sans-serif;
