WIP improved sippet parsing, detection and discovery, added basic CSS syntax support

--- a/demos/webpack/public/bundle.css
+++ b/demos/webpack/public/bundle.css
@@ -3,6 +3,16 @@ body {
   background: purple;
 }
 html,
+body,
+.class,
+#id {
+  background: green;
+  font-family: sans-serif;
+  padding: 0px;
+  display: block!important;
+  visibility: -;
+}
+html,
 body {
   background: cornflowerblue;
   color: #222;
