--- a/demos/webpack/styles/app.styl
+++ b/demos/webpack/styles/app.styl
@@ -1,4 +1,8 @@
-html, body
-  background: red
-  color: #222
-  font-family: sans-serif
+@import 'module.styl';
+@import 'mod34.54.styl';
+
+html, body {
+  background: cornflowerblue;
+  color: #222;
+  font-family: sans-serif;
+}
